# code_practice

./: .gitignore  README.md
src/chapt4_interfaces/: CMakeLists.txt  package.xml
src/chapt4_interfaces/srv/: Patrol.srv
src/cpp_srvcli/: CMakeLists.txt  package.xml
src/cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp
src/demo_cpp_pkg/: CMakeLists.txt
src/demo_cpp_pkg/src/: cpp_node.cpp  learn_lambda.cpp  learn_share_ptr.cpp  person_node.cpp
src/demo_cpp_service/: CMakeLists.txt  package.xml
src/demo_cpp_service/src/: turtle_control.cpp
src/demo_cpp_topic/: CMakeLists.txt  package.xml
src/demo_cpp_topic/src/: novel_pub_node.cpp  novel_sub_node.cpp  turtle_circle.cpp  turtle_control.cpp
src/status_display/: CMakeLists.txt  package.xml
src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
src/status_interfaces/: package.xml
src/status_interfaces/msg/: SystemStatus.msg
